--- a/index.html
+++ b/index.html
@@ -3,12 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="script.js" defer></script>
     <link rel="stylesheet" href="styles.css">
     <title>Etch-a-Sketch</title>
 </head>
 <body>
-    <div id="container"></div>
+    <div id="frame">
+        <div id="controls">
+            <button></button>
+            <button></button>
+            <button></button>
+            <button></button>
+        </div>
+        <div id="grid-container"></div>
+    </div>
     
 </body>
+<script src="script.js" defer></script>
 </html>
