--- a/index.html
+++ b/index.html
@@ -14,27 +14,27 @@
         <div id="controls">
             <h1 class="windowTitle">Sketchpad</h1>
             <div class="rightControls">
-                <button><span class="material-symbols-outlined size-20">
+                <button id="brush-button"><span class="material-symbols-outlined size-20">
                         brush
                     </span></button>
-                <button><span class="material-symbols-outlined size-20">
+                <button id="eraser-button"><span class="material-symbols-outlined size-20">
                         ink_eraser
                     </span></button>
-                <button><div id="color-box"></div></button>
-                <button><span class="material-symbols-outlined size-20">
+                <button id="color-button"><div id="color-box"></div></button>
+                <button id="blend"><span class="material-symbols-outlined size-20">
                         opacity
                     </span></button>
-                    <button><span class="material-symbols-outlined size-20">
+                    <button id="random-button"><span class="material-symbols-outlined size-20">
                             palette
                         </span></button>
-                <button id="grid-toggle"><span class="material-symbols-outlined size-20">
+                <button id="grid-toggle"><span class="material-symbols-outlined size-20" id="grid-icon">
                         grid_on
                     </span></button>
                 <div id="slider-container">
                     <input type="range" min="6" max="100" value="16" class="slider" id="slider">
                     <p id="slider-value"></p>
                 </div>
-                <button id="clear-button"><span class="material-symbols-outlined size-20">
+                <button id="clear-button"><span class="material-symbols-outlined size-20" id="clear-icon">
                         delete
                     </span></button>
             </div>
