add color input

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <button id="eraser-button"><span class="material-symbols-outlined size-20">
                         ink_eraser
                     </span></button>
-                <button id="color-button"><div id="color-box"></div></button>
+                <input type="color" value="#000000" id="color-button">
                 <button id="blend"><span class="material-symbols-outlined size-20">
                         opacity
                     </span></button>
