remove blend button

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
                         ink_eraser
                     </span></button>
                 <input type="color" value="#000000" id="color-button">
-                <button id="blend"><span class="material-symbols-outlined size-20">
+                <!-- <button id="blend-button"><span class="material-symbols-outlined size-20">
                         opacity
-                    </span></button>
+                    </span></button> -->
                     <button id="random-button"><span class="material-symbols-outlined size-20">
                             palette
                         </span></button>
