--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <!-- <button id="blend-button"><span class="material-symbols-outlined size-20">
                         opacity
                     </span></button> -->
-                    <button id="random-button"><span class="material-symbols-outlined size-20">
+                    <button id="random-button"><span class="material-symbols-outlined size-20" id="random-icon">
                             palette
                         </span></button>
                 <button id="grid-toggle"><span class="material-symbols-outlined size-20" id="grid-icon">
