--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css" />
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght@300" rel="stylesheet" />
     <script src="script.js" defer></script>
-    <title>Etch-a-Sketch</title>
+    <title>Sketchpad</title>
 </head>
 
 <body>
@@ -25,9 +25,9 @@
                 <!-- <button id="blend-button"><span class="material-symbols-outlined size-20">
                         opacity
                     </span></button> -->
-                    <button id="random-button"><span class="material-symbols-outlined size-20" id="random-icon">
-                            palette
-                        </span></button>
+                <button id="random-button"><span class="material-symbols-outlined size-20" id="random-icon">
+                        palette
+                    </span></button>
                 <button id="grid-toggle"><span class="material-symbols-outlined size-20" id="grid-icon">
                         grid_on
                     </span></button>
@@ -42,7 +42,7 @@
         </div>
         <div id="grid-container"></div>
     </div>
-
+    <footer>built by adrian</footer>
 </body>
 
 </html>
